--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="navigation-bar">
         <div class="logotitle"><img src="images/ezzlearning2.png" alt="logo"></div>
             <div class="nav1">
-                <a href="https://newsletter-nitya-ryoshi.herokuapp.com" target="_blank">Newsletter</a></li>
+                <a href="https://ezzlearning-newsletter.herokuapp.com/" target="_blank">Newsletter</a></li>
             </div>
             <div class="nav2">
                 <a href="#" target="_blank">EzzPool</a>
