--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a href="https://ezzlearning-newsletter.herokuapp.com/" target="_blank">Newsletter</a></li>
             </div>
             <div class="nav2">
-                <a href="#" target="_blank">EzzPool</a>
+                <a href="https://ezzpool.herokuapp.com/" target="_blank">EzzPool</a>
             </div>
     </div>
 
