--- a/resources.html
+++ b/resources.html
@@ -45,7 +45,7 @@
                 <a href="Graphic_designing.html">Vector Art</a>
             </div>
             <div class="entertainment_link">
-                <a href="index.html"><p>Ezzpool</p></a>
+                <a href="https://ezzpool.herokuapp.com/"><p>Ezzpool</p></a>
             </div>
         </div>
     </div>
