--- a/entertainment.html
+++ b/entertainment.html
@@ -15,6 +15,7 @@
   </head>
 
   <body data-scroll-container id="scrollable">
+    <div class="scroll_instructions"><div class="scroll1">Scroll</div><div class="scroll2">Down</div></div>
     <div class="main_starting_circle">
       <h1>Entertainment Page</h1>
     </div>
