--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
     <div class="About_us" id="About_us">
-        <p class="discord">Be a part of our community: <a href="#"><img src="images/discord.png" class="discord_image"></a></p>
+        <p class="discord">Be a part of our community: <a href="https://discord.gg/gBG6EcRg"><img src="images/discord.png" class="discord_image"></a></p>
         <div class="names">
 
             <div class="profile">
