--- a/entertainment.html
+++ b/entertainment.html
@@ -27,7 +27,7 @@
         data-scroll-speed="18"
         data-scroll-target="#scrollable"
       >
-        <a onclick="move_shit1()">ANIMES</a>
+        <a onclick="move_shit1()">ANIME</a>
       </div>
       <div
         class="movies"
